# OneWifi

./: .clang-format  .gitignore  CODE_STYLE.md  Makefile.am  NOTICE  README.md  configure.ac  genautotools.ini
.github/: CODEOWNERS  release.yml
.github/workflows/: fossid_integration_stateless_diffscan_target_repo.yml  makefile.yml
config/: TR181-WiFi-USGv2.XML  WifiSingleClientActiveMeasurement.avsc  bus_dml_config.json  rdkb-wifi.ovsschema
config/openwrt/banana-pi/: InterfaceMap.json  wifi_interface_down.sh  wifi_interface_up.sh
config/subdoc_schemas_1_4/: associated_clients_subdoc_schema  blaster_config_subdoc_schema  connected-building-wifi.schema  csi_data_subdoc_schema  dml_subdoc_schema  home_subdoc_schema  instant_msrmnt_subdoc_schema  lnf_subdoc_schema  macfilter_subdoc_schema  mesh_backhaul_subdoc_schema  mesh_sta_subdoc_schema  null_subdoc_schema  private_subdoc_schema  radio_subdoc_schema  stats_config_subdoc_schema  steering_clients_subdoc_schema  steering_config_subdoc_schema  vif_neighbors_subdoc_schema  wifi7_three_radio_subdoc_schema  xfinity_subdoc_schema
include/: platform-logger.h  webconfig_external_proto.h  webconfig_external_proto_easymesh.h  webconfig_external_proto_ovsdb.h  webconfig_external_proto_tr181.h  wifi_base.h  wifi_events.h  wifi_webconfig.h
include/dml_webconfig/: dml_onewifi_api.h
include/tr_181/ml/: ccsp_WifiLog_wrapper.h  cosa_apis.h  cosa_wifi_dml.h  cosa_wifi_internal.h
lib/: Makefile.am
lib/common/: Makefile.am  devinfo.h  util.c  util.h
lib/const/: Makefile.am  const.h
lib/datapipeline/: Makefile.am  dpp_bs_client.h  dpp_capacity.h  dpp_client.h  dpp_client_auth_fails.h  dpp_device.h  dpp_neighbor.h  dpp_rssi.h  dpp_survey.h  dpp_types.h  dppline.c  dppline.h  opensync_stats.pb-c.c  opensync_stats.pb-c.h  osp_unit.h  osp_unit_rdk.c  update_proto.sh
lib/ds/: Makefile.am  ds_dlist.h
lib/inc/: build_version.h  schema_gen.h  target.h
lib/json_util/: Makefile.am
lib/log/: Makefile.am  log.c  log.h  log_journal.c
lib/osa/: Makefile.am  os_nif.h  os_nif_linux.c  os_socket.c  os_socket.h
lib/ovsdb/: Makefile.am  ovsdb.c  ovsdb.h  ovsdb_cache.c  ovsdb_cache.h  ovsdb_method.c  ovsdb_priv.h  ovsdb_sync.c  ovsdb_sync.h  ovsdb_sync_api.c  ovsdb_table.c  ovsdb_table.h  ovsdb_update.c  ovsdb_update.h
lib/pjs/: Makefile.am
lib/pktgen/: Makefile.am  pktgen.c  pktgen.h
lib/qm/: Makefile.am  qm_conn.c
lib/schema/: Makefile.am  schema.c  schema.h  schema_consts.h
scripts/: HeapwalkField.sh  Heapwalkcheckrss.sh  OneWiFi_Selfheal.sh  OneWiFi_vap_down.sh  aphealth.sh  aphealth_log.sh  bandsteering_log.sh  copy_wifi_logs.sh  cosa_start_onewifiagent.sh  dailystats_log.sh  get_vlan.sh  handle_mesh  mesh_setip.sh  mesh_status.sh  meshapcfg.sh  onewifi.service  onewifiagent_start  process_monitor_atom.sh  radiohealth.sh  radiohealth_log.sh  synclease.sh  wifiTelemetrySetup.sh  wifi_logupload.sh
scripts/systemd/: process_monitor_atom.service  wifi-telemetry-cron.service  wifi-telemetry.target
source/: Makefile.am
source/apps/: wifi_apps.c  wifi_apps_mgr.c  wifi_apps_mgr.h
source/apps/analytics/: wifi_analytics.c  wifi_analytics.h
source/apps/blaster/: wifi_blaster.c  wifi_blaster.h  wifi_single_client_msmt.c
source/apps/cac/: wifi_cac.c  wifi_cac.h
source/apps/csi/: wifi_csi.c  wifi_csi.h  wifi_csi_analytics.c  wifi_csi_analytics.h
source/apps/easyconnect/: wifi_easyconnect.c  wifi_easyconnect.h
source/apps/em/: wifi_em.c  wifi_em.h  wifi_em_utils.c  (+1 more)
source/ccsp/: ccsp.c  ccsp.h  ccsp_api.c
source/core/: Makefile.am  wifi_8021x.c  wifi_8021x.h  wifi_ctrl.c  wifi_ctrl.h  wifi_ctrl_queue_handlers.c  wifi_ctrl_rbus_handlers.c  wifi_ctrl_webconfig.c  wifi_ctrl_wifiapi_handlers.c  wifi_data_plane.c  wifi_data_plane.h  wifi_easy_connect.c  wifi_easy_connect.h  wifi_events.c  wifi_mgr.c  wifi_mgr.h  wifi_multidoc_webconfig.c  wifi_passpoint.c  wifi_passpoint.h  wifi_webconfig_old.h
source/db/: wifi_db.c  wifi_db.h  wifi_db_apis.c
source/dml/: Makefile.am
source/platform/: Makefile.am
source/sampleapps/: Makefile.am  webconfig_consumer_apis.c  webconfig_consumer_cli.c  webconfig_consumer_cli.h  wifi_webconfig_consumer.c  wifi_webconfig_consumer.h  wifievents_consumer_sample.c
source/services/: services.c  wifi_service_node.h  wifi_services_mgr.c  wifi_services_mgr.h
source/stats/: wifi_associated_devices_msmt.c  wifi_monitor.c  wifi_monitor.h  wifi_stats.c  wifi_stats_assoc_client.c  wifi_stats_neighbor_report.c  wifi_stats_radio_channel.c  wifi_stats_radio_diagnostics.c  wifi_stats_radio_temperature.c
source/stubs/: wifi_stubs.c  wifi_stubs.h
source/test/: Makefile.am  gtest_main.cpp  webconfig_consumer_test.cpp  wifi_api2.c
source/utils/: Makefile.am  caps.c  collection.c  collection.h  ext_blaster.pb-c.c  ext_blaster.pb-c.h  ext_blaster.proto  jsonconv.c  ovsh.c  scheduler.c  scheduler.h  timespec_macro.h  wifi_util.c  wifi_util.h  wifi_validator.c  wifi_validator.h
source/webconfig/: Makefile.am  wifi_decoder.c  wifi_easymesh_translator.c  wifi_encoder.c  wifi_ovsdb_translator.c  wifi_webconfig.c  wifi_webconfig_assocdevice_stats.c  wifi_webconfig_associated_client.c  wifi_webconfig_beacon_report.c  wifi_webconfig_blaster.c  wifi_webconfig_cac.c  wifi_webconfig_csi.c  wifi_webconfig_dml.c  wifi_webconfig_easymesh_config.c  wifi_webconfig_em_ap_metrics_report.c  wifi_webconfig_em_channel_stats.c  wifi_webconfig_em_sta_link_metrics.c  wifi_webconfig_harvester.c  wifi_webconfig_home.c  wifi_webconfig_levl.c  wifi_webconfig_lnf.c  wifi_webconfig_macfilter.c  wifi_webconfig_memwraptool.c  wifi_webconfig_mesh.c  wifi_webconfig_mesh_backhaul.c  wifi_webconfig_mesh_backhaul_sta.c  wifi_webconfig_mesh_sta.c  wifi_webconfig_multivap.c  wifi_webconfig_neighbor_stats.c  wifi_webconfig_null.c  wifi_webconfig_private.c  wifi_webconfig_radio.c  wifi_webconfig_radio_stats.c  wifi_webconfig_radio_temperature.c  wifi_webconfig_radiodiag_stats.c  wifi_webconfig_stats_config.c  wifi_webconfig_steering_clients.c  wifi_webconfig_steering_config.c  wifi_webconfig_vif_neighbors.c  wifi_webconfig_wifi_config.c  (+3 more)
(+138 files in other folders)
